[8dd852e1817c7e9108fbd885f5004b34e8918ab0]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce-copy.md' via CloudCannon

--- a/manual/cielo-ecommerce-copy.html
+++ b/manual/cielo-ecommerce-copy.html
@@ -176,6 +176,40 @@
   </tbody>
 </table>
 
+<table>
+  <thead>
+    <tr>
+      <th>AF</th>
+      <th> </th>
+      <th> </th>
+      <th>Red</th>
+      <th> </th>
+      <th>Cyber</th>
+      <th> </th>
+    </tr>
+    <tr>
+      <th>Parametro</th>
+      <th>Descrição</th>
+      <th>Tipo</th>
+      <th>Obrigatório</th>
+      <th>Size</th>
+      <th>Obrigatório</th>
+      <th>Size</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 
