[63f889bcebe7aa3902ec2745de70ff514a273484]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce-copy.md' via CloudCannon

--- a/manual/cielo-ecommerce-copy.html
+++ b/manual/cielo-ecommerce-copy.html
@@ -142,43 +142,6 @@
 <table>
   <thead>
     <tr>
-      <th> </th>
-      <th style="text-align: center">Grouping</th>
-      <th style="text-align: right"> </th>
-    </tr>
-    <tr>
-      <th>First Header</th>
-      <th style="text-align: center">Second Header</th>
-      <th style="text-align: right">Third Header</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Content</td>
-      <td style="text-align: center"><em>Long Cell</em></td>
-      <td style="text-align: right"> </td>
-    </tr>
-    <tr>
-      <td>Content</td>
-      <td style="text-align: center"><strong>Cell</strong></td>
-      <td style="text-align: right">Cell</td>
-    </tr>
-    <tr>
-      <td>New section</td>
-      <td style="text-align: center">More</td>
-      <td style="text-align: right">Data</td>
-    </tr>
-    <tr>
-      <td>And more</td>
-      <td style="text-align: center">And more</td>
-      <td style="text-align: right"> </td>
-    </tr>
-  </tbody>
-</table>
-
-<table>
-  <thead>
-    <tr>
       <th>AF</th>
       <th> </th>
       <th> </th>
@@ -198,6 +161,105 @@
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
+    <tr>
+      <td><strong>MerchantOrderId</strong></td>
+      <td>Número do Pedido da Loja.</td>
+      <td><code class="highlighter-rouge">string</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td><code class="highlighter-rouge">required</code></td>
+      <td><code class="highlighter-rouge">100</code></td>
+    </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
       <td>Número do Pedido da Loja.</td>
