[7f83f31ca34ad85c9c8e570fc1a6c297b366ae97]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce-copy.md' via CloudCannon

--- a/manual/cielo-ecommerce-copy.html
+++ b/manual/cielo-ecommerce-copy.html
@@ -149,6 +149,7 @@
       <th> </th>
       <th>Cyber</th>
       <th> </th>
+      <th> </th>
     </tr>
     <tr>
       <th>Parametro</th>
@@ -158,6 +159,7 @@
       <th>Size</th>
       <th>Obrigatório</th>
       <th>Size</th>
+      <th>Observação</th>
     </tr>
   </thead>
   <tbody>
@@ -169,6 +171,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -178,6 +181,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -187,6 +191,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -196,6 +201,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -205,6 +211,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -214,6 +221,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -223,6 +231,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -232,6 +241,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -241,6 +251,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -250,6 +261,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -259,6 +271,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
@@ -268,6 +281,7 @@
       <td><code class="highlighter-rouge">100</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
+      <td> </td>
     </tr>
   </tbody>
 </table>
