[3c40b25e7eae207f313850f3c8f6165eb216ba84]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce-copy.md' via CloudCannon

--- a/manual/cielo-ecommerce-copy.html
+++ b/manual/cielo-ecommerce-copy.html
@@ -275,7 +275,7 @@
     </tr>
     <tr>
       <td><strong>MerchantOrderId</strong></td>
-      <td>Número do Pedido da Loja.</td>
+      <td>Número do Pedido da Loja.<br /><br />1-Cielo<br />2-Rede<br />3-Stone<br /></td>
       <td><code class="highlighter-rouge">string</code></td>
       <td><code class="highlighter-rouge">required</code></td>
       <td><code class="highlighter-rouge">100</code></td>
