[205ac0f17262041547eaa910dcb3cae51c4ef9d5]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -9866,6 +9866,10 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
   </tbody>
 </table>
 
+<aside class="warning"><b>OBS:</b> Utilizando a API Cielo Ecommerce, apenas o processo de autorização com Tokens 1.5 é permitido. Outras funcionalidades da API não estão disponiveis, como Recorrencia Programada, Renova Facil e Wallets.</aside>
+
+<aside class="warning"><b>Atenção:</b> Não é possivel converter Tokens 1.5 para Tokens API Cielo E-commerce.</aside>
+
 <h3 id="requisição-29">Requisição</h3>
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">/1/sales/</span></aside>
