[3deddbfce421c59698fc3eee9785a45028215901]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -403,7 +403,7 @@
 
 <p>Normalmente, o browser faz a atualização do Certificado automaticamente, caso não o faça e o cliente entre em contato deverá ser informado os seguintes passos:</p>
 
-<h4 id="1o-passo">1o Passo:</h4>
+<p><strong>1o Passo:</strong></p>
 
 <p>Salvar os três arquivos abaixo em uma pasta nova, ou que relembre facilmente, pois será utilizada posteriormente:</p>
 
@@ -414,7 +414,7 @@
   <li><a href="https://developercielo.github.io/attachment/ServerCertificate.crt">Certificado E-Commerce Cielo</a></li>
 </ul>
 
-<h4 id="2o-passo">2o Passo:</h4>
+<p><strong>2o Passo:</strong></p>
 
 <p>No “Internet Explorer”, clique no menu “Ferramentas” e acesse as “Opções da Internet”:</p>
 
@@ -428,7 +428,7 @@
 
 <p><img src="https://developercielo.github.io/images/certificado-instalar-gc-1.jpg" alt="Instalar GC" /></p>
 
-<h4 id="3o-passo">3o Passo:</h4>
+<p><strong>3o Passo:</strong></p>
 
 <p>No Internet Explorer, em “Certificados”, clique em “Importar”.</p>
 
@@ -442,7 +442,7 @@
 
 <p><img src="https://developercielo.github.io/images/certificado-instalar-gc-2.jpg" alt="Instalar GC" /></p>
 
-<h4 id="4o-passo">4o Passo:</h4>
+<p><strong>4o Passo:</strong></p>
 
 <p>No Internet Explorer e Chrome “Assistente para Importação de Certificados”, clique em “Avançar”.</p>
 
@@ -454,7 +454,7 @@
 
 <p><img src="https://developercielo.github.io/images/certificado-instalar-ff-3.jpg" alt="Instalar FF" /></p>
 
-<h4 id="5o-passo">5o Passo:</h4>
+<p><strong>5o Passo:</strong></p>
 
 <p>No Chrome e Internet Explorer “Assistente para Importação de Certificados”, clique em “Procurar”, procure a pasta onde estão os arquivos e selecione o arquivo “cieloecommerce.cielo.com.br.crt, clique em “Abrir” e em seguida “Avançar”.</p>
 
@@ -462,19 +462,19 @@
 
 <p><img src="https://developercielo.github.io/images/certificado-instalar-ie-gc-6.jpg" alt="Instalar IE e GC" /></p>
 
-<h4 id="6o-passo">6o Passo:</h4>
+<p><strong>6o Passo:</strong></p>
 
 <p>Selecionar a opção desejada: adicionar o Certificado em uma pasta padrão ou procurar a pasta de sua escolha.</p>
 
 <p><img src="https://developercielo.github.io/images/certificado-instalar-ie-gc-7.jpg" alt="Instalar IE e GC" /></p>
 
-<h4 id="7o-passo">7o Passo:</h4>
+<p><strong>7o Passo:</strong></p>
 
 <p>Clique em “Concluir”.</p>
 
 <p><img src="https://developercielo.github.io/images/certificado-instalar-ie-gc-8.jpg" alt="Instalar IE e GC" /></p>
 
-<h4 id="8o-passo">8o Passo:</h4>
+<p><strong>8o Passo:</strong></p>
 
 <p>Clique em “Ok” para concluir a importação.</p>
 
@@ -486,7 +486,7 @@
 
 <p><img src="https://developercielo.github.io/images/certificado-instalar-ie-gc-10.jpg" alt="Instalar IE e GC" /></p>
 
-<h4 id="9o-passo">9o Passo:</h4>
+<p><strong>9o Passo:</strong></p>
 
 <p>Repita o mesmo procedimento para os 3 arquivos enviados.</p>
 
