[5c1dbf2faf2a009159bcf673bd0439e652eb9858]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -157,8 +157,9 @@
 <p>Com a transação capturada, a Braspag calcula o valor destinado a cada participante e repassa esses valores, no prazo estabelecido de acordo com cada produto (regime de pagamento*), para cada envolvido na transação.</p>
 
 <blockquote>
-  <p><strong>Regime de Pagamento</strong>: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.<br />
-<strong>Crédito</strong>: Em até 31 dias.<br />
+  <p><strong>Regime de Pagamento</strong>: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.<br /></p>
+
+  <p><strong>Crédito</strong>: Em até 31 dias.<br />
 <strong>Crédito</strong> Parcelado: 1º parcela em até 31 dias, demais a cada 30.<br />
 <strong>Débito</strong>: Em até 1 dia útil<br /></p>
 </blockquote>
