[c8fbd4c63e7aa95bd8b8630ef768ff7da5f5f4a4]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -119,7 +119,8 @@
 
 <h2 id="introdução">Introdução</h2>
 
-<p>O Split de Pagamentos permite a divisão de uma transação entre diferentes participantes de uma venda.</p>
+<p><br />
+O Split de Pagamentos permite a divisão de uma transação entre diferentes participantes de uma venda.</p>
 
 <p>Muito utilizado em Marketplaces, onde <strong>o carrinho é composto por produtos de diferentes fornecedores</strong> e o valor total da venda deve ser dividido entre os participantes.</p>
 
@@ -146,9 +147,7 @@
   </tbody>
 </table>
 
-<blockquote>
-  <p><strong>MDR</strong>  (<em>Merchant Discount Rate</em>): Percentual a ser descontado sobre o valor de uma transação.</p>
-</blockquote>
+<aside class="notice">**MDR**  (*Merchant Discount Rate*): Percentual a ser descontado sobre o valor de uma transação.</aside>
 
 <p>No Split de Pagamentos o responsável pelo fluxo transacional é o facilitador.</p>
 
