[2fabb52c0089221d1ec2f0d8a658b1a20a5e1d1a]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -134,11 +134,11 @@ O Split de Pagamentos permite a divisão de uma transação entre diferentes par
   <tbody>
     <tr>
       <td><strong>Marketplace</strong></td>
-      <td>Responsável pelo carrinho. <br /> Possui <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define um MDR* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /></td>
+      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define um MDR* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /></td>
     </tr>
     <tr>
       <td><strong>Subordinado</strong></td>
-      <td>Fornecedor dos produtos que compõem o carrinho.<br />Recebe parte do valor da venda, descontado o MDR* acordado com o <strong>Marketplace</strong>.<br /></td>
+      <td>Fornecedor dos produtos que compõem o carrinho.<br />Recebe parte do valor da venda, descontadas as taxas acordadas com o <strong>Marketplace</strong>.<br /></td>
     </tr>
     <tr>
       <td><strong>Braspag (Facilitador)</strong></td>
