[1e6494a6a02a5603ae5bb813d47fc3455ea10955]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -134,7 +134,7 @@ O Split de Pagamentos permite a divisão de uma transação entre diferentes par
   <tbody>
     <tr>
       <td><strong>Marketplace</strong></td>
-      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define um MDR* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /></td>
+      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define um MDR* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /> Na venda, pode fornecer produtos próprios juntamente com seus <strong>Subordinados</strong>.</td>
     </tr>
     <tr>
       <td><strong>Subordinado</strong></td>
@@ -147,7 +147,9 @@ O Split de Pagamentos permite a divisão de uma transação entre diferentes par
   </tbody>
 </table>
 
-<aside class="notice">**MDR**  (*Merchant Discount Rate*): Percentual a ser descontado sobre o valor de uma transação.</aside>
+<blockquote>
+  <p><strong>MDR</strong>  (<em>Merchant Discount Rate</em>): Percentual a ser descontado sobre o valor de uma transação.&lt;/aside&gt;</p>
+</blockquote>
 
 <p>No Split de Pagamentos o responsável pelo fluxo transacional é o facilitador.</p>
 
