[8bfffef905adc6b8e25f1972c712c79d29b7c631]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -120,9 +120,9 @@
 <h2 id="introdução">Introdução</h2>
 
 <p><br />
-O Split de Pagamentos permite a divisão de uma transação entre diferentes participantes de uma venda.</p>
+O <strong>Split de Pagamentos</strong> permite a divisão de uma transação entre diferentes participantes de uma venda.</p>
 
-<p>Muito utilizado em Marketplaces, onde <strong>o carrinho é composto por produtos de diferentes fornecedores</strong> e o valor total da venda deve ser dividido entre os participantes.</p>
+<p>Muito utilizado em Marketplaces, onde <strong>o carrinho é composto por produtos de diferentes fornecedores e o valor total da venda deve ser dividido entre os participantes</strong>.</p>
 
 <table>
   <thead>
