[3956de636e910ae10dcad3c78172b1e35e4ec836]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -148,7 +148,7 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 </table>
 
 <blockquote>
-  <p><strong>MDR</strong>  (<em>Merchant Discount Rate</em>): Percentual a ser descontado sobre o valor de uma transação.&lt;/aside&gt;</p>
+  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado sobre o valor de uma transação.&lt;/aside&gt;</p>
 </blockquote>
 
 <p>No Split de Pagamentos o responsável pelo fluxo transacional é o facilitador.</p>
