--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -134,7 +134,7 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
   <tbody>
     <tr>
       <td><strong>Marketplace</strong></td>
-      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define um MDR* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /> Na venda, pode fornecer produtos próprios juntamente com seus <strong>Subordinados</strong>.</td>
+      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define um MDR* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /> Pode ser participante em um carrinho de compras fornecendo seus próprios produtos.</td>
     </tr>
     <tr>
       <td><strong>Subordinado</strong></td>
