[332cb77a196448e1603fefdfc7011ff6f2a98c39]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -148,7 +148,7 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 </table>
 
 <blockquote>
-  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado sobre o valor de uma transação.&lt;/aside&gt;</p>
+  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado sobre o valor de uma transação.</p>
 </blockquote>
 
 <p>No Split de Pagamentos o responsável pelo fluxo transacional é o facilitador.</p>
@@ -158,9 +158,9 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 <p>Com a transação capturada, a Braspag calcula o valor destinado a cada participante e repassa esses valores, no prazo estabelecido de acordo com cada produto (regime de pagamento*), para cada envolvido na transação.</p>
 
 <blockquote>
-  <p><strong>Regime de Pagamento</strong>: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.<br /></p>
-
-  <p><strong>Crédito</strong>: Em até 31 dias.<br />
+  <p><strong>Regime de Pagamento</strong>: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.<br />
+<br />
+<strong>Crédito</strong>: Em até 31 dias.<br />
 <strong>Crédito</strong> Parcelado: 1º parcela em até 31 dias, demais a cada 30.<br />
 <strong>Débito</strong>: Em até 1 dia útil<br /></p>
 </blockquote>
