--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -134,7 +134,7 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
   <tbody>
     <tr>
       <td><strong>Marketplace</strong></td>
-      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define um MDR* e uma Tarifa Fixa (opcional) a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /> Pode ser participante em um carrinho de compras fornecendo seus próprios produtos.</td>
+      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define as taxas a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /> Pode ser participante em um carrinho de compras fornecendo seus próprios produtos.</td>
     </tr>
     <tr>
       <td><strong>Subordinado</strong></td>
@@ -142,14 +142,10 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
     </tr>
     <tr>
       <td><strong>Braspag (Facilitador)</strong></td>
-      <td>Responsável pelo fluxo transacional.<br /> Define um MDR* e uma Tarifa Fixa a serem descontados sobre o valor total da venda realizada pelo <strong>Marketplace</strong>.<br /> Responsável pela liquidação dos pagamentos para os <strong>Subordinados</strong> e <strong>Marketplace</strong>.</td>
+      <td>Responsável pelo fluxo transacional.<br /> Define as taxas a serem descontadas sobre o valor total da venda realizada pelo <strong>Marketplace</strong>.<br /> Responsável pela liquidação dos pagamentos para os <strong>Subordinados</strong> e <strong>Marketplace</strong>.</td>
     </tr>
   </tbody>
 </table>
-
-<blockquote>
-  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado sobre o valor de uma transação.</p>
-</blockquote>
 
 <p>No Split de Pagamentos o responsável pelo fluxo transacional é o facilitador.</p>
 
