--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -161,14 +161,14 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 <strong>Débito</strong>: Em até 1 dia útil<br /></p>
 </blockquote>
 
-<p>Para utilizar o Split de Pagamentos, o <strong>Marketplace</strong> deverá se cadastrar na Braspag juntamente com seus <strong>Subordinados</strong>. Após este processo, tanto o <strong>Marketplace</strong> quanto seus <strong>Subordinados</strong> possuirão um identificador único, conhecido como <strong>MerchantId (MID)</strong>, que deverá ser utlizado ao informar as regras de divisão de uma transação.</p>
+<p>Para utilizar o Split de Pagamentos, o Marketplace deverá se cadastrar na Braspag juntamente com seus Subordinados. Após este processo, tanto o Marketplace quanto seus Subordinados possuirão um identificador único, conhecido como <strong>MerchantId (MID)</strong>, que deverá ser utlizado ao informar as regras de divisão de uma transação.</p>
 
 <p>A divisão de uma transação deve serguir as seguintes regras:</p>
 
 <ul>
-  <li>Informar os identificadores dos <strong>Subordinados</strong>.</li>
-  <li>Os valores de participação de cada <strong>Subordinado</strong>. O somatório deverá ser igual ao valor total da transação.</li>
-  <li>MDRs + Tarifas Fixas (opcional) a serem aplicados sobre o valor de cada <strong>Subordinado</strong> que será destinado ao <strong>Marketplace</strong>. Deverá ser acordado previamente entre o <strong>Marketplace</strong> e o <strong>Subordinado</strong>.</li>
+  <li>Informar os <strong>identificadores dos Subordinados</strong>.</li>
+  <li>Os <strong>valores de participação de cada Subordinado</strong>. O somatório deverá ser igual ao valor total da transação.</li>
+  <li><strong>Taxas</strong> a serem aplicadas sobre o valor de cada Subordinado que serão destinadas ao Marketplace. Estas deverão ser acordadas previamente entre o Marketplace e o Subordinado.</li>
 </ul>
 
 <p>O <strong>Marketplace</strong> também pode ser um participante da divisão. Para isso basta informar seu identificador na divisão, passando o mesmo a ter também o papel de <strong>Subordinado</strong> e ter seus próprios produtos no carrinho.</p>
