--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -163,15 +163,15 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 
 <p>Para utilizar o Split de Pagamentos, o Marketplace deverá se cadastrar na Braspag juntamente com seus Subordinados. Após este processo, tanto o Marketplace quanto seus Subordinados possuirão um identificador único, conhecido como <strong>MerchantId (MID)</strong>, que deverá ser utlizado ao informar as regras de divisão de uma transação.</p>
 
-<p>A divisão de uma transação deve serguir as seguintes regras:</p>
+<p>Na divisão de uma transação, devem ser informado:</p>
 
 <ul>
-  <li>Informar os <strong>identificadores dos Subordinados</strong>.</li>
+  <li>Os <strong>identificadores dos Subordinados</strong>.</li>
   <li>Os <strong>valores de participação de cada Subordinado</strong>. O somatório deverá ser igual ao valor total da transação.</li>
   <li><strong>Taxas</strong> a serem aplicadas sobre o valor de cada Subordinado que serão destinadas ao Marketplace. Estas deverão ser acordadas previamente entre o Marketplace e o Subordinado.</li>
 </ul>
 
-<p>O <strong>Marketplace</strong> também pode ser um participante da divisão. Para isso basta informar seu identificador na divisão, passando o mesmo a ter também o papel de <strong>Subordinado</strong> e ter seus próprios produtos no carrinho.</p>
+<p>O Marketplace também pode ser um participante da divisão, bastando informar seu identificador, passando o mesmo a ter também o papel de <strong>Subordinado</strong> e ter seus próprios produtos no carrinho.</p>
 
 <h2 id="taxas">Taxas</h2>
 
