[f778586d7a592a6f4136590fc0a65d8083182e52]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -175,7 +175,8 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 
 <h2 id="taxas">Taxas</h2>
 
-<p>As taxas acordadas entre os participantes, que são o <strong>MDR(%)</strong> e uma <strong>Taxa Fixa(R$)</strong>, devem ser definidas no momento do cadastro do <strong>Marketplace</strong> e dos seus <strong>Subordinados</strong> junto à Braspag.</p>
+<p><br />
+As taxas acordadas entre os participantes, que são o <strong>MDR(%)</strong> e uma <strong>Taxa Fixa(R$)</strong>, devem ser definidas no momento do cadastro do <strong>Marketplace</strong> e dos seus <strong>Subordinados</strong> junto à Braspag.</p>
 
 <p>As mesmas poderão ser enviadas no momento transacional ou pós-transacional. Caso não sejam enviadas, a <strong>Braspag</strong> irá considerar as taxas já cadastradas.</p>
 
