--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -171,7 +171,8 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
   <li><strong>Taxas</strong> a serem aplicadas sobre o valor de cada Subordinado que serão destinadas ao Marketplace. Estas deverão ser acordadas previamente entre o Marketplace e o Subordinado.</li>
 </ul>
 
-<p>O Marketplace também pode ser um participante da divisão, bastando informar seu identificador, passando o mesmo a ter também o papel de <strong>Subordinado</strong> e ter seus próprios produtos no carrinho.</p>
+<p><br /> 
+O Marketplace também pode ser um participante da divisão, bastando informar seu identificador, passando o mesmo a ter também o papel de <strong>Subordinado</strong> e ter seus próprios produtos no carrinho.</p>
 
 <h2 id="taxas">Taxas</h2>
 
