--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -163,7 +163,7 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 
 <p>Para utilizar o Split de Pagamentos, o Marketplace deverá se cadastrar na Braspag juntamente com seus Subordinados. Após este processo, tanto o Marketplace quanto seus Subordinados possuirão um identificador único, conhecido como <strong>MerchantId (MID)</strong>, que deverá ser utlizado ao informar as regras de divisão de uma transação.</p>
 
-<p>Na divisão de uma transação, devem ser informado:</p>
+<p>Na divisão de uma transação, deve ser informado:</p>
 
 <ul>
   <li>Os <strong>identificadores dos Subordinados</strong>.</li>
