[1a0772a222233dbb6eaf86bf2ecdbf6e01130315]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -177,13 +177,13 @@ O Marketplace também pode ser um participante da divisão, bastando informar se
 <h2 id="taxas">Taxas</h2>
 
 <p><br />
-As taxas acordadas entre os participantes, que são o <strong>MDR(%)</strong> e uma <strong>Taxa Fixa(R$)</strong>, devem ser definidas no momento do cadastro do <strong>Marketplace</strong> e dos seus <strong>Subordinados</strong> junto à Braspag.</p>
+As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong> e/ou uma <strong>Taxa Fixa(R$)</strong>, devem ser definidas no momento do cadastro do Marketplace e dos seus Subordinados junto aoà Braspag (Facilitador).</p>
 
-<p>As mesmas poderão ser enviadas no momento transacional ou pós-transacional. Caso não sejam enviadas, a <strong>Braspag</strong> irá considerar as taxas já cadastradas.</p>
+<p>As mesmas poderão ser enviadas no momento transacional (captura) ou pós-transacional. Caso não sejam enviadas, serão consideradas as taxas cadastradas e acordadas previamente entre o participantes.</p>
 
 <h3 id="braspag-facilitador">Braspag (Facilitador)</h3>
 
-<p>A Braspag acordará um <strong>MDR(%)</strong> e uma <strong>Tarifa Fixa(R$)</strong> com o <strong>Marketplace</strong> a serem descontados em cada transação.</p>
+<p>A Braspag acordará um MDR(%) e/ou uma Tarifa Fixa(R$) com o Marketplace a serem descontadas do valor total de cada transação.</p>
 
 <p>O <strong>Marketplace</strong>, de conhecimento destas taxas, negociará o seu <strong>MDR(%)</strong> e uma <strong>Tarifa Fixa(R$)(opcional)</strong> juntamente com seus <strong>Subornidandos</strong>, já embutindo o <strong>MDR(%)</strong> acordado junto à <strong>Braspag</strong>.</p>
 
