[1270f57f2a2041a4dcc24cb90aeff343d62bb3d0]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -181,11 +181,15 @@ As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong
 
 <p>As mesmas poderão ser enviadas no momento transacional (captura) ou pós-transacional. Caso não sejam enviadas, serão consideradas as taxas cadastradas e acordadas previamente entre o participantes.</p>
 
+<blockquote>
+  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado do valor de uma transação</p>
+</blockquote>
+
 <h3 id="braspag-facilitador">Braspag (Facilitador)</h3>
 
-<p>A Braspag acordará um MDR(%) e/ou uma Tarifa Fixa(R$) com o Marketplace a serem descontadas do valor total de cada transação.</p>
+<p>A Braspag acordará um MDR e/ou uma Tarifa Fixa com o Marketplace a serem descontadas do valor total de cada transação.</p>
 
-<p>O <strong>Marketplace</strong>, de conhecimento destas taxas, negociará o seu <strong>MDR(%)</strong> e uma <strong>Tarifa Fixa(R$)(opcional)</strong> juntamente com seus <strong>Subornidandos</strong>, já embutindo o <strong>MDR(%)</strong> acordado junto à <strong>Braspag</strong>.</p>
+<p>O Marketplace, de conhecimento destas taxas, negociará o seu MDR(%) e/ou uma Tarifa Fixa(R$) juntamente com seus Subornidandos, já considerando o MDR e/ou Tarifa acordados junto à <strong>Braspag</strong>.</p>
 
 <p>O desconto da <strong>Tarifa Fixa(R$)</strong>, acordado entre o <strong>Marketplace</strong> e a <strong>Braspag</strong>, não é aplicado no valor total da transação, não entrando no cálculo da divisão e sim sendo debitado do montante que o <strong>Marketplace</strong> tem para receber junto à <strong>Braspag</strong>. O <strong>MDR(%)</strong> entra no cálculo de divisão da transação, já que o mesmo deve estar embutido no <strong>MDR(%)</strong> acordado entre o <strong>Marketplace</strong> e seus <strong>Subordinados.</strong></p>
 
