--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -177,21 +177,22 @@ O Marketplace também pode ser um participante da divisão, bastando informar se
 <h2 id="taxas">Taxas</h2>
 
 <p><br />
-As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong> e/ou uma <strong>Taxa Fixa(R$)</strong>, devem ser definidas no momento do cadastro do Marketplace e dos seus Subordinados junto aoà Braspag (Facilitador).</p>
+As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong> e/ou uma <strong>Taxa Fixa(R$)</strong>, devem ser definidas no momento do cadastro do Marketplace e dos seus Subordinados junto à Braspag (Facilitador).</p>
 
 <p>As mesmas poderão ser enviadas no momento transacional (captura) ou pós-transacional. Caso não sejam enviadas, serão consideradas as taxas cadastradas e acordadas previamente entre o participantes.</p>
 
 <blockquote>
-  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado do valor de uma transação</p>
+  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado do valor de uma transação 
+<strong>Tarifa Fixa:</strong> Valor em centavos a ser cobrado pela transação</p>
 </blockquote>
 
 <h3 id="braspag-facilitador">Braspag (Facilitador)</h3>
 
 <p>A Braspag acordará um MDR e/ou uma Tarifa Fixa com o Marketplace a serem descontadas do valor total de cada transação.</p>
 
-<p>O Marketplace, de conhecimento destas taxas, negociará o seu MDR(%) e/ou uma Tarifa Fixa(R$) juntamente com seus Subornidandos, já considerando o MDR e/ou Tarifa acordados junto à <strong>Braspag</strong>.</p>
+<p>O Marketplace, de conhecimento destas taxas, negociará também um MDR e/ou uma Tarifa Fixa juntamente com cada Subordinado, embutindo o MDR e/ou Tarifa acordados junto à Braspag (Facilitador).</p>
 
-<p>O desconto da <strong>Tarifa Fixa(R$)</strong>, acordado entre o <strong>Marketplace</strong> e a <strong>Braspag</strong>, não é aplicado no valor total da transação, não entrando no cálculo da divisão e sim sendo debitado do montante que o <strong>Marketplace</strong> tem para receber junto à <strong>Braspag</strong>. O <strong>MDR(%)</strong> entra no cálculo de divisão da transação, já que o mesmo deve estar embutido no <strong>MDR(%)</strong> acordado entre o <strong>Marketplace</strong> e seus <strong>Subordinados.</strong></p>
+<p>O desconto da Tarifa Fixa, acordada entre o Marketplace e a Braspag, não é aplicado no valor total da transação, ou seja, a mesma não entra no cálculo da divisão e sim é debitada diretamente do montante que o Marketplace tem para receber junto à Braspag (Facilitador). O MDR entra no cálculo de divisão da transação, já que o mesmo deve estar embutido no MDR acordado entre o Marketplace e seus Subordinados.</p>
 
 <blockquote>
   <p><strong>Custo para o Marketplace:</strong> MDR Braspag(%) + Tarifa Fixa(R$)
