--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -134,7 +134,7 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
   <tbody>
     <tr>
       <td><strong>Marketplace</strong></td>
-      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define as taxas a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /> Pode ser participante em um carrinho de compras fornecendo seus próprios produtos.</td>
+      <td>Responsável pelo carrinho. <br /> Possui acordos <strong>Subordinados</strong> que fornecem os produtos presentes no carrinho.<br /> Define as taxas a serem descontados sobre a venda do <strong>Subordinado</strong>.<br /> Pode participar de uma venda fornecendo seus próprios produtos.</td>
     </tr>
     <tr>
       <td><strong>Subordinado</strong></td>
