[9e7229853840cea898cee2d74217d53372c89a10]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -119,6 +119,8 @@
 
 <h2 id="introdução">Introdução</h2>
 
+<h3 id="particpantes">Particpantes</h3>
+
 <p><br />
 O <strong>Split de Pagamentos</strong> permite a divisão de uma transação entre diferentes participantes de uma venda.</p>
 
@@ -174,7 +176,7 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 <p><br /> 
 O Marketplace também pode ser um participante da divisão, bastando informar seu identificador, passando o mesmo a ter também o papel de <strong>Subordinado</strong> e ter seus próprios produtos no carrinho.</p>
 
-<h2 id="taxas">Taxas</h2>
+<h3 id="taxas">Taxas</h3>
 
 <p><br />
 As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong> e/ou uma <strong>Taxa Fixa(R$)</strong>, devem ser definidas no momento do cadastro do Marketplace e dos seus Subordinados junto à Braspag (Facilitador).</p>
@@ -186,7 +188,7 @@ As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong
 <strong>Tarifa Fixa:</strong> Valor em centavos a ser cobrado pela transação</p>
 </blockquote>
 
-<h3 id="braspag-facilitador">Braspag (Facilitador)</h3>
+<h4 id="braspag-facilitador">Braspag (Facilitador)</h4>
 
 <p>A Braspag acordará um MDR e/ou uma Tarifa Fixa com o Marketplace a serem descontadas do valor total de cada transação.</p>
 
@@ -195,7 +197,7 @@ As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong
 <p>O desconto da Tarifa Fixa, acordada entre o Marketplace e a Braspag, não é aplicado no valor total da transação, ou seja, a mesma não entra no cálculo da divisão e sim é debitada diretamente do montante que o Marketplace tem para receber junto à Braspag (Facilitador). O MDR entra no cálculo de divisão da transação, já que o mesmo deve estar embutido no MDR acordado entre o Marketplace e seus Subordinados.</p>
 
 <blockquote>
-  <p><strong>Custo para o Marketplace:</strong> MDR Braspag(%) + Tarifa Fixa(R$)
+  <p><strong>Custo Marketplace:</strong> MDR Braspag(%) + Tarifa Fixa(R$)
 O <strong>MDR(%)</strong> acordado entre um <strong>Marketplace</strong> e um <strong>Subordinado</strong> deve ser sempre maior que o <strong>MDR(%)</strong> acordado entre a <strong>Braspag</strong> e o <strong>Marketplace</strong>.</p>
 </blockquote>
 
