[0e0e007d2514d239d6907ab563c7de468b58485c]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -119,7 +119,7 @@
 
 <h2 id="introdução">Introdução</h2>
 
-<h3 id="particpantes">Particpantes</h3>
+<h3 id="definição">Definição</h3>
 
 <p><br />
 O <strong>Split de Pagamentos</strong> permite a divisão de uma transação entre diferentes participantes de uma venda.</p>
