[5831805681e543e1ec75439f33a9551799391061]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -184,8 +184,8 @@ As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong
 <p>As mesmas poderão ser enviadas no momento transacional (captura) ou pós-transacional. Caso não sejam enviadas, serão consideradas as taxas cadastradas e acordadas previamente entre o participantes.</p>
 
 <blockquote>
-  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado do valor de uma transação 
-<strong>Tarifa Fixa:</strong> Valor em centavos a ser cobrado pela transação</p>
+  <p><strong>MDR (<em>Merchant Discount Rate</em>):</strong> Percentual a ser descontado do valor de uma transação.<br />
+<strong>Tarifa Fixa:</strong> Valor em centavos a ser cobrado pela transação.</p>
 </blockquote>
 
 <h4 id="braspag-facilitador">Braspag (Facilitador)</h4>
