[c3aafd70c800a2d97f5b8a0c0e6511f32949ec95]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -190,7 +190,8 @@ As taxas acordadas entre os participantes, podendo ser um <strong>MDR(%)</strong
 
 <h4 id="braspag-facilitador">Braspag (Facilitador)</h4>
 
-<p>A Braspag acordará um MDR e/ou uma Tarifa Fixa com o Marketplace a serem descontadas do valor total de cada transação.</p>
+<p><br />
+A Braspag acordará um MDR e/ou uma Tarifa Fixa com o Marketplace a serem descontadas do valor total de cada transação.</p>
 
 <p>O Marketplace, de conhecimento destas taxas, negociará também um MDR e/ou uma Tarifa Fixa juntamente com cada Subordinado, embutindo o MDR e/ou Tarifa acordados junto à Braspag (Facilitador).</p>
 
@@ -203,13 +204,14 @@ O <strong>MDR(%)</strong> acordado entre um <strong>Marketplace</strong> e um <s
 
 <h4 id="marketplace">Marketplace</h4>
 
-<p>O Marketplace é responsável por acordar as taxas a serem cobradas dos seus Subordinados, onde deve ser defindo um MDR maior ou igual ao MDR definido entre a Braspag (Facilitador) e o Marketplace e uma Tarifa Fixa, que é opcional.</p>
+<p><br />
+O Marketplace é responsável por acordar as taxas a serem cobradas dos seus Subordinados, onde deve ser defindo um MDR maior ou igual ao MDR definido entre a Braspag (Facilitador) e o Marketplace e uma Tarifa Fixa, que é opcional.</p>
 
 <blockquote>
   <p><strong>Custo para o Subordinado:</strong> MDR Marketplace(%) + Tarifa Fixa(R$), onde no MDR Marketplace(%) está embutido o MDR Braspag(%).</p>
 </blockquote>
 
-<h3 id="primeiro-exemplo">Primeiro Exemplo</h3>
+<h3 id="exemplo">Exemplo</h3>
 
 <p>Uma transação de <strong>R$100</strong>, realizada por um <strong>Marketplace</strong> com participação do <strong>Subordinado 01</strong>.</p>
 
