[8130aa0192626bf4db3aed165c00d6e7a87d1bbf]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -198,8 +198,13 @@ A Braspag acordará um MDR e/ou uma Tarifa Fixa com o Marketplace a serem descon
 <p>O desconto da Tarifa Fixa, acordada entre o Marketplace e a Braspag, não é aplicado no valor total da transação, ou seja, a mesma não entra no cálculo da divisão e sim é debitada diretamente do montante que o Marketplace tem para receber junto à Braspag (Facilitador). O MDR entra no cálculo de divisão da transação, já que o mesmo deve estar embutido no MDR acordado entre o Marketplace e seus Subordinados.</p>
 
 <blockquote>
-  <p><strong>Custo Marketplace:</strong> MDR Braspag(%) + Tarifa Fixa(R$)
-O <strong>MDR(%)</strong> acordado entre um <strong>Marketplace</strong> e um <strong>Subordinado</strong> deve ser sempre maior que o <strong>MDR(%)</strong> acordado entre a <strong>Braspag</strong> e o <strong>Marketplace</strong>.</p>
+  <p><strong>Custo Marketplace:</strong> MDR Braspag(%) + Tarifa Fixa(R$)</p>
+</blockquote>
+
+<p><br /></p>
+
+<blockquote>
+  <p>O <strong>MDR(%)</strong> acordado entre um <strong>Marketplace</strong> e um <strong>Subordinado</strong> deve ser sempre maior que o <strong>MDR(%)</strong> acordado entre a <strong>Braspag</strong> e o <strong>Marketplace</strong>.</p>
 </blockquote>
 
 <h4 id="marketplace">Marketplace</h4>
@@ -225,14 +230,14 @@ O Marketplace é responsável por acordar as taxas a serem cobradas dos seus Sub
 <p>Após o split, cada participante terá sua agenda sensibilizada com os seguintes eventos:</p>
 
 <p><strong>Subordinado</strong>:<br />
-Crédito: R$94,70 = (R$100 - 5%) - R$0,30.</p>
+Crédito: R$94,70</p>
 
 <p><strong>Marketplace</strong>:<br />
-Crédito: R$3,30 = R$100 * (5% - 2%) + R$0,30.<br />
+Crédito: R$3,30<br />
 Débito: R$0,30 (Tarifa Fixa Braspag)</p>
 
 <p><strong>Braspag (Facilitador)</strong>:<br />
-Crédito: R$2,00 = R$100 * 2%.<br />
+Crédito: R$2,00<br />
 Crédito: R$0,30 (Tarifa Fixa Braspag)</p>
 
 <h2 id="integração">Integração</h2>
